...
                    border = BorderStroke(1.dp, MaterialTheme.colorScheme.outlineVariant),
                ) {
                    Column(Modifier.padding(16.dp), verticalArrangement = Arrangement.spacedBy(16.dp)) {
                        Column(verticalArrangement = Arrangement.spacedBy(8.dp)) {
                            Text(
                                payment?.payment?.receipt?.orderNumber?.let { "Заказ № $it" }
                                    ?: if (booking.orderId == null) "Оформляем заказ" else "Аренда бытовок",
                                style = MaterialTheme.typography.titleLarge,
                            )
                            Surface(
                                shape = RoundedCornerShape(8.dp),
                                color = MaterialTheme.colorScheme.primaryContainer,
                            ) {
...
